Added some pictures

--- a/somendu/src/main/webapp/02_Portfolio.html
+++ b/somendu/src/main/webapp/02_Portfolio.html
@@ -24,7 +24,7 @@
 	<header>
 		<a class="logo" href="#"><img src="images/logo-white.png" alt="Logo"></a>
 		
-		<a class="right-area" href="mailto:contact@colorlib.com">CONTACT@COLORLIB.COM</a>
+		<a class="right-area" href="mailto:somendu.maiti@gmail.com">somendu.maiti@gmail.com</a>
 		
 		<a class="menu-nav-icon" data-menu="#main-menu"><i class="ion-navicon"></i></a>
 		
@@ -50,11 +50,11 @@
 	<section class="main-section">
 		<div class="p-grid-isotope">
 		
-			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-1-300x500.jpg">
-				<img src="images/porfolio-1-300x500.jpg" alt=""/></a></div>
+			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-1-asiatique-600x1000.jpg">
+				<img src="images/porfolio-1-asiatique.jpg" alt=""/></a></div>
 		
-			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-2-700x500.jpg">
-				<img src="images/porfolio-2-700x500.jpg" alt=""/></a></div>
+			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-2-white-temple-1050x750.jpg">
+				<img src="images/porfolio-2-white-temple.jpg" alt=""/></a></div>
 		
 			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-3-550x500.jpg">
 				<img src="images/porfolio-3-550x500.jpg" alt=""/></a></div>
@@ -65,8 +65,8 @@
 			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-5-300x500.jpg">
 				<img src="images/porfolio-5-300x500.jpg" alt=""/></a></div>
 		
-			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-6-700x500.jpg">
-				<img src="images/porfolio-6-700x500.jpg" alt=""/></a></div>
+			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-6-pratapgarh-1400x1000.jpg">
+				<img src="images/porfolio-6-pratapgarh-700x500.jpg" alt=""/></a></div>
 		
 			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-7-550x500.jpg">
 				<img src="images/porfolio-7-550x500.jpg" alt=""/></a></div>
@@ -129,8 +129,8 @@
 			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-24-550x360.jpg">
 				<img src="images/porfolio-24-550x360.jpg" alt=""/></a></div>
 
-			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-25-550x280.jpg">
-				<img src="images/porfolio-25-550x280.jpg" alt=""/></a></div>
+			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-1-mumbai-cst.jpg">
+				<img src="images/porfolio-1-mumbai-cst.jpg" alt=""/></a></div>
 				
 		</div><!-- p-grid -->
 	</section><!-- main-section -->
