--- a/maiti_grdl/src/main/webapp/index.html
+++ b/maiti_grdl/src/main/webapp/index.html
@@ -29,20 +29,20 @@
 <body>
 	
 	<header>
-		<a class="logo" href="#"><img src="images/som.png" alt="Logo"></a>
+		<a class="logo" href="/index.html"><img src="images/som.png" alt="Logo"></a>
 		
 		<a class="right-area" href="mailto:somendu.maiti@gmail.com">somendu.maiti@gmail.com</a>
 		
 		<a class="menu-nav-icon" data-menu="#main-menu"><i class="ion-navicon"></i></a>		
 		<ul class="main-menu" id="main-menu">
-			<li><a href="/hello">Home</a></li>
+			<li><a href="/index.html">Home</a></li>
 			<li class="drop-down"><a href="#!">Portfolio<i class="ion-arrow-down-b"></i></a>
 				<ul class="drop-down-menu drop-down-inner">
 					<li><a href="02_Portfolio.html">Portfolio 1</a></li>
 					<li><a href="03_Portfolio.html">Portfolio 2</a></li>
 				</ul>
 			</li>
-			<li class="drop-down"><a href="/back">Blog<i class="ion-arrow-down-b"></i></a>
+			<li class="drop-down"><a href="#!">Blog<i class="ion-arrow-down-b"></i></a>
 				<ul class="drop-down-menu drop-down-inner">
 					<li><a href="04_Blog.html">Blog Page</a></li>
 					<li><a href="05_Blog_Single.html">Blog Detail</a></li>
@@ -305,11 +305,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 		<a class="show-thumb-btn" href="#">SHOW THUMBNAILS</a>
 		
 		<ul class="social-icons">
-			<li><a href="#"><i class="ion-social-facebook-outline"></i></a></li>
-			<li><a href="#"><i class="ion-social-twitter-outline"></i></a></li>
-			<li><a href="#"><i class="ion-social-instagram-outline"></i></a></li>
-			<li><a href="#"><i class="ion-social-vimeo-outline"></i></a></li>
-			<li><a href="#"><i class="ion-social-pinterest-outline"></i></a></li>
+			<li><a href="https://www.facebook.com/maitisom" target="_blank"><i class="ion-social-facebook-outline"></i></a></li>
+			<li><a href="https://twitter.com/somendu" target="_blank"><i class="ion-social-twitter-outline"></i></a></li>
+			<li><a href="https://www.instagram.com/somendu/" target="_blank"><i class="ion-social-instagram-outline"></i></a></li>
+			<li><a href="https://www.youtube.com/c/SomenduMaiti/"><i class="ion-social-youtube-outline"></i></a></li>
 		</ul><!-- social-icons -->
 	</footer>
 	
