--- a/maiti_grdl/src/main/webapp/02_Portfolio.html
+++ b/maiti_grdl/src/main/webapp/02_Portfolio.html
@@ -21,27 +21,31 @@
 </head>
 <body>
 	
-    <header>
+	<header>
 		<a class="logo" href="/index.html"><img src="images/som.png" alt="Logo"></a>
-		
-		<a class="right-area" href="mailto:somendu.maiti@gmail.com">somendu.maiti@gmail.com</a>
 		
 		<a class="menu-nav-icon" data-menu="#main-menu"><i class="ion-navicon"></i></a>		
 		<ul class="main-menu" id="main-menu">
 			<li><a href="/index.html">Home</a></li>
-			<li class="drop-down"><a href="#!">Portfolio<i class="ion-arrow-down-b"></i></a>
+			<li class="drop-down"><a href="#!">Captcha<i class="ion-arrow-down-b"></i></a>
 				<ul class="drop-down-menu drop-down-inner">
-					<li><a href="02_Portfolio.html">Portfolio 1</a></li>
-					<li><a href="03_Portfolio.html">Portfolio 2</a></li>
+					<li><a href="02_Portfolio.html">Som's Captcha</a></li>
+<!-- 					<li><a href="03_Portfolio.html">Portfolio 2</a></li> -->
 				</ul>
 			</li>
 			<li class="drop-down"><a href="#!">Blog<i class="ion-arrow-down-b"></i></a>
 				<ul class="drop-down-menu drop-down-inner">
-					<li><a href="04_Blog.html">Blog Page</a></li>
-					<li><a href="05_Blog_Single.html">Blog Detail</a></li>
+					<li><a href="https://somendumaiti.blogspot.com/" target="_blank">Blog Page</a></li>
+<!-- 					<li><a href="05_Blog_Single.html">Blog Detail</a></li> -->
 				</ul>
 			</li>
-			<li><a href="06_Regular_Page.html">Regular page</a></li>
+			
+		 
+			<li><a href="https://www.facebook.com/maitisom" target="_blank"><i class="ion-social-facebook-outline"></i></a></li>
+			<li><a href="https://twitter.com/somendu" target="_blank"><i class="ion-social-twitter-outline"></i></a></li>
+			<li><a href="https://www.instagram.com/somendu/" target="_blank"><i class="ion-social-instagram-outline"></i></a></li>
+			<li><a href="https://www.youtube.com/c/SomenduMaiti/"><i class="ion-social-youtube-outline"></i></a></li>
+	 
 		</ul>
 	</header>
 	
@@ -133,25 +137,6 @@
 				
 		</div><!-- p-grid -->
 	</section><!-- main-section -->
-	
-	<footer>
-		
-		<p class="copyright">
-			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ion-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-		</p>
-		
-		<a class="show-thumb-btn" href="#">SHOW THUMBNAILS</a>
-		
-		<ul class="social-icons">
-			<li><a href="#"><i class="ion-social-facebook-outline"></i></a></li>
-			<li><a href="#"><i class="ion-social-twitter-outline"></i></a></li>
-			<li><a href="#"><i class="ion-social-instagram-outline"></i></a></li>
-			<li><a href="#"><i class="ion-social-vimeo-outline"></i></a></li>
-			<li><a href="#"><i class="ion-social-pinterest-outline"></i></a></li>
-		</ul><!-- social-icons -->
-	</footer>
 	
 	
 	<!-- SCIPTS -->
