--- a/maiti_grdl/src/main/webapp/04_Blog.html
+++ b/maiti_grdl/src/main/webapp/04_Blog.html
@@ -27,16 +27,16 @@
 		<a class="menu-nav-icon" data-menu="#main-menu"><i class="ion-navicon"></i></a>		
 		<ul class="main-menu" id="main-menu">
 			<li><a href="/index.html">Home</a></li>
-			<li class="drop-down"><a href="#!">Portfolio<i class="ion-arrow-down-b"></i></a>
+			<li class="drop-down"><a href="#!">Captcha<i class="ion-arrow-down-b"></i></a>
 				<ul class="drop-down-menu drop-down-inner">
-					<li><a href="02_Portfolio.html">Portfolio 1</a></li>
-					<li><a href="03_Portfolio.html">Portfolio 2</a></li>
+					<li><a href="02_Portfolio.html">Som's Captcha</a></li>
+<!-- 					<li><a href="03_Portfolio.html">Portfolio 2</a></li> -->
 				</ul>
 			</li>
 			<li class="drop-down"><a href="#!">Blog<i class="ion-arrow-down-b"></i></a>
 				<ul class="drop-down-menu drop-down-inner">
-					<li><a href="04_Blog.html">Blog Page</a></li>
-					<li><a href="05_Blog_Single.html">Blog Detail</a></li>
+					<li><a href="https://somendumaiti.blogspot.com/"  target="_blank">Blog Page</a></li>
+<!-- 					<li><a href="05_Blog_Single.html">Blog Detail</a></li> -->
 				</ul>
 			</li>
 			<li><a href="06_Regular_Page.html">Regular page</a></li>
