--- a/maiti_grdl/src/main/webapp/index.html
+++ b/maiti_grdl/src/main/webapp/index.html
@@ -69,7 +69,7 @@
 					data-saveperformance="off"  data-title="Slide" 
 					data-slicey_shadow="0px 0px 50px 0px transparent">
 					<!-- MAIN IMAGE -->
-					<img src="images/slider-1-snow.jpg"  alt=""  data-bgposition="center center" 
+					<img src="images/slider-1-wht-tmpl.jpg"  alt=""  data-bgposition="center center" 
 						data-kenburns="on" data-duration="7000" data-ease="Linear.easeNone" 
 						data-scalestart="100" data-scaleend="150" data-rotatestart="0" data-rotateend="0" 
 						data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" 
@@ -93,7 +93,7 @@
 						data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
 
 						style="z-index: 14; white-space: nowrap; font-size: 80px; line-height: 90px; font-weight: 600; 
-						color: rgba(255,255,255,100); ">Rotterdam Snow</div>
+						color: rgba(255,255,255,100); ">White Temple</div>
 
 <!-- 					LAYER NR. 2 -->
 <!-- 					<div class="tp-caption tp-resizeme visit-btn"  -->
@@ -128,7 +128,7 @@
 					data-slicey_shadow="0px 0px 50px 0px transparent">
 					
 					<!-- MAIN IMAGE -->
-					<img src="images/slider-1-snow2.jpg"  alt=""  data-bgposition="center center" data-kenburns="on"
+					<img src="images/slider-1-chtchk.jpg"  alt=""  data-bgposition="center center" data-kenburns="on"
 						data-duration="7000" data-ease="Linear.easeNone" data-scalestart="100" 
 						data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-blurstart="0"
 						data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" class="rev-slidebg"
@@ -152,7 +152,7 @@
 						data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
 
 						style="z-index: 14; white-space: nowrap; font-size: 80px; line-height: 90px; font-weight: 600; 
-						color: rgba(255,255,255,100); ">Rotterdam Snow</div>
+						color: rgba(255,255,255,100); ">Chatuchak Park</div>
 
 					<!-- LAYER NR. 2 -->
 <!-- 					<div class="tp-caption tp-resizeme visit-btn"  -->
@@ -186,7 +186,7 @@
 					data-param8="" data-param9="" data-param10="" data-description="" 
 					data-slicey_shadow="0px 0px 50px 0px transparent">
 					<!-- MAIN IMAGE -->
-					<img src="images/slider-1-magar.jpg"  alt=""  data-bgposition="center center" 
+					<img src="images/slider-1-dnylnd.jpg"  alt=""  data-bgposition="center center" 
 						data-kenburns="on" data-duration="7000" data-ease="Linear.easeNone" 
 						data-scalestart="100" data-scaleend="150" data-rotatestart="0" data-rotateend="0" 
 						data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" 
@@ -209,7 +209,7 @@
 						data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
 
 						style="z-index: 14; white-space: nowrap; font-size: 80px; line-height: 90px; font-weight: 600; 
-						color: rgba(255,255,255,100); ">Magarpatta</div>
+						color: rgba(255,255,255,100); ">Disney Land</div>
 
 					<!-- LAYER NR. 2 -->
 <!-- 					<div class="tp-caption tp-resizeme visit-btn"  -->
@@ -245,7 +245,7 @@
 					data-slicey_shadow="0px 0px 50px 0px transparent">
 					
 					<!-- MAIN IMAGE -->
-					<img src="images/slider-1-lonavala.jpg"  alt=""  data-bgposition="center center" data-kenburns="on"
+					<img src="images/slider-1-ancs.jpg"  alt=""  data-bgposition="center center" data-kenburns="on"
 						data-duration="7000" data-ease="Linear.easeNone" data-scalestart="100" 
 						data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-blurstart="0"
 						data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" class="rev-slidebg"
@@ -269,7 +269,7 @@
 						data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
 
 						style="z-index: 14; white-space: nowrap; font-size: 80px; line-height: 90px; font-weight: 600; 
-						color: rgba(255,255,255,100); ">Lonavala</div>
+						color: rgba(255,255,255,100); ">Ancient City</div>
 
 					<!-- LAYER NR. 2 -->
 <!-- 					<div class="tp-caption tp-resizeme visit-btn"  -->
