--- a/maiti_grdl/src/main/webapp/index.html
+++ b/maiti_grdl/src/main/webapp/index.html
@@ -51,8 +51,8 @@
 			<li><a href="https://www.facebook.com/maitisom" target="_blank"><i class="ion-social-facebook-outline"></i></a></li>
 			<li><a href="https://twitter.com/somendu" target="_blank"><i class="ion-social-twitter-outline"></i></a></li>
 			<li><a href="https://www.instagram.com/somendu/" target="_blank"><i class="ion-social-instagram-outline"></i></a></li>
-			<li><a href="https://www.youtube.com/c/SomenduMaiti/"><i class="ion-social-youtube-outline"></i></a></li>
-	 
+			<li><a href="https://www.youtube.com/c/SomenduMaiti/" target="_blank"><i class="ion-social-youtube-outline"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/somendu-maiti-9779687/" target="_blank"><i class="ion-social-linkedin-outline"></i></a></li>		 
 		</ul>
 	</header>
 	
